--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -54,7 +54,7 @@
 
     <div class="feature" id="track-progress">
         <img src="../../assets/img/rising.png" alt="Progress Image">
-        <h2>Track Your Progress</h2>
+        <h2 routerLink="/charts" style="cursor: pointer;">Track Your Progress</h2>
         <p>Log your daily activities, monitor your fitness achievements, and visualize your progress with intuitive
             charts.</p>
     </div>
