--- a/src/app/features/assessment/assessment.component.html
+++ b/src/app/features/assessment/assessment.component.html
@@ -113,6 +113,6 @@
         <button type="submit" class="btn btn-primary btn-lg" [disabled]="assessForm?.invalid" (click)="addUser()">Submit</button>
     </div>
     <div class="d-flex justify-content-center pe-5 mb-3 me-5 mb-lg-4 btn2">
-        <button type="submit" class="btn btn-primary btn-lg" (click)="openDialog()">See Recommendations</button>
+        <button type="submit" class="btn btn-primary btn-lg" [disabled]="assessForm?.invalid" (click)="openDialog()">See Recommendations</button>
     </div>
 </div>
