--- a/src/shared/components/navbar/navbar.component.html
+++ b/src/shared/components/navbar/navbar.component.html
@@ -8,6 +8,6 @@
       <li routerLink="homepage">Home</li>
       <li routerLink="options">Features</li>
       <li routerLink="feedback">Feedback</li>
-      <li routerLink="login">Login</li>
+      <a routerLink=""><li id="log"></li></a>
     </ul>
 </nav>
